--- a/nav.css
+++ b/nav.css
@@ -1,17 +1,8 @@
-/*
-Color Palette
-background color: #200439
-primary: #512C73
-secondary: #361356
-tertiary: #6F4D8F
-accent: #9277AC
-vegasGold: #c5b358
-white: #fff
-black: #000  
-*/
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@300;400;600;700&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
+
+
 
 .navbar {
     display: flex;
@@ -27,12 +18,12 @@ black: #000
     font-family: 'Dancing Script', cursive;
 }
 
+
 .navbar-links ul {
     margin: 0;
     padding: 0;
     display: flex;
 }
-
 .navbar-links li {
     list-style: none;
     padding: 1rem;
@@ -40,7 +31,6 @@ black: #000
 }
 
 .navbar-links li a {
-    text-decoration: none;
     color: #fff;
     padding: 0.5rem 2rem;
     display: block;
@@ -50,15 +40,16 @@ black: #000
     background-color: #361356;
 }
 
+
 .toggle-button {
-    position: absolute;
-    top: 1.5rem;
-    right: 1.5rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 20px;
+position: absolute;
+top: 1.5rem;
+right: 1.5rem;
+display: none;
+flex-direction: column;
+justify-content: space-between; 
+width: 30px;
+height: 20px;
 }
 
 .toggle-button .bar {
@@ -69,31 +60,51 @@ black: #000
 }
 
 
+
+.bottomNav {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottomNav li {
+    list-style: none;
+    font-size: 0.9rem;
+    padding: 0 0.5rem;
+}
+
+.bottomNav li a {
+    text-decoration: none;
+    color: #c5b358;
+    display: block;
+}
+
+
 @media (max-width: 800px) {
     .toggle-button {
         display: flex;
     }
     
+    
     .navbar-links {
         display: none;
-        width: 100%;
+        width: 100%
     }
-    
-    .navbar {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    
-    .navbar-links ul {
+.navbar-links ul {
         width: 100%;
         flex-direction: column;
     }
+    
     
     .navbar-links li {
         text-align: center;
     }
     
+    
     .navbar-links.active {
         display: flex;
     }
 }
+
