--- a/nav.css
+++ b/nav.css
@@ -92,6 +92,12 @@ height: 20px;
         display: none;
         width: 100%
     }
+    
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+ 
 .navbar-links ul {
         width: 100%;
         flex-direction: column;
